# mlops-workflow

./: .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
src/: data_to_tensors.py  generate_predictions.py  model.py  predict_nn.py  prepare_data.py  train.py  train_nn.py  tune_hparams.py  tune_nn.py  validate_data.py
