[project]
name = "mlops-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "dvc>=3.64.0",
    "great-expectations>=1.9.1",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
]
